Fixed page spacing.

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ textarea {
   flex-wrap: wrap;
   padding: 10px;
   margin: 0;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .app-header__title {
